--- a/docs/lore_theme.css
+++ b/docs/lore_theme.css
@@ -10,15 +10,17 @@
 
 /* Optional: embed custom fonts here with `@import`          */
 /* This must remain at the top of this file.                 */
-
+@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope');
+@import url('https://fonts.googleapis.com/css2?family=Cabin');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Mono'); */
 
 
 html {
   /*-- Main font sizes --*/
   --title-size:      50px;
-  --body-size:       1.06rem;
+  --body-size:       1.08rem;
   --code-size:       14px;
-  --aside-size:      12px;
+  --aside-size:      13px;
   --fig-cap-size:    13px;
   /*-- Main font colors --*/
   --title-color:     #000000;
@@ -27,10 +29,10 @@ html {
   --aside-color:     rgba(0, 0, 0, 0.6);
   --fig-cap-color:   rgba(0, 0, 0, 0.6);
   /*-- Specify custom fonts ~~~ must be imported above   --*/
-  --heading-font:    sans-serif;
+  --heading-font:    Annie Use Your Telescope;
   --mono-font:       monospace;
-  --body-font:       sans-serif;
-  --navbar-font:     sans-serif;  /* websites + blogs only */
+  --body-font:       Cabin;
+  --navbar-font:     Annie Use Your Telescope;  /* websites + blogs only */
 }
 
 /*-- ARTICLE METADATA --*/
@@ -59,18 +61,18 @@ d-appendix {
 /* These properties only apply to Distill sites and blogs  */
 
 .distill-site-header {
-  --title-size:       18px;
+  --title-size:       22px;
   --text-color:       rgba(255, 255, 255, 0.8);
-  --text-size:        15px;
+  --text-size:        16px;
   --hover-color:      white;
-  --bkgd-color:       #0F2E3D;
+  --bkgd-color:       #0a656e;
 }
 
 .distill-site-footer {
   --text-color:       rgba(255, 255, 255, 0.8);
   --text-size:        15px;
   --hover-color:      white;
-  --bkgd-color:       #0F2E3D;
+  --bkgd-color:       #0a656e;
 }
 
 /*-- Additional custom styles --*/
